--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <p>
         Noch einmal vielen Dank.
       </p>
-      <p>Mit freundlichen grüßen</p>
+      <p>Mit freundlichen Grüßen</p>
     </main>
     <footer class="footer">
       <div>
