--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style_kopie.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Allura&display=swap"
       rel="stylesheet"
@@ -23,25 +23,28 @@
       <h1>VIELEN DANK</h1>
     </header>
     <main class="main">
-      <p>Sehr geehrte Frau Hühnerschulte,</p>
-      <p>
-        hiermit möchte ich mich bei Ihnen, für die Möglichkeit des
-        Orientierungskurses beim DCI, herzlich bedanken.
-      </p>
-      <p>
-        Dank Ihnen, konnte ich die Grundkentnisse des Webdevelopments und des
-        Online-Marketings lernen. Infolgedessen konnte ich u.a. diese Seite
-        bauen.
-      </p>
-      <p>
-        Außerdem hatte ich die Möglichkeit zu realizieren, dass ich wirklich in
-        diesem Bereich arbeiten möchte. Deshalb wäre ich wirklich nützlich, wenn
-        ich den jährlicher Weiterbildungskurs für Web Development machen kann.
-      </p>
-      <p>
-        Noch einmal vielen Dank.
-      </p>
-      <p>Mit freundlichen Grüßen</p>
+      <div class="main-background">
+        <p>Sehr geehrte Frau Hühnerschulte,</p>
+        <p>
+          hiermit möchte ich mich bei Ihnen, für die Möglichkeit des
+          Orientierungskurses beim DCI, herzlich bedanken.
+        </p>
+        <p>
+          Dank Ihnen, konnte ich die Grundkentnisse des Webdevelopments und des
+          Online-Marketings lernen. Infolgedessen konnte ich u.a. diese Seite
+          bauen.
+        </p>
+        <p>
+          Außerdem hatte ich die Möglichkeit zu realizieren, dass ich wirklich
+          in diesem Bereich arbeiten möchte. Deshalb wäre ich wirklich nützlich,
+          wenn ich den jährlicher Weiterbildungskurs für Web Development machen
+          kann.
+        </p>
+        <p>
+          Noch einmal vielen Dank.
+        </p>
+        <p class="last-par">Mit freundlichen Grüßen</p>
+      </div>
     </main>
     <footer class="footer">
       <div>
